<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Layouts</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>

    <!-- Linear Layout -->
    <string name="linear_layout">Linear Layout</string>
    <string name="relative_layout">Relative Layout</string>
    <string name="absolute_layout">Absolute Layout</string>
    <string name="frame_layout">Frame Layout</string>
    <string name="table_layout">Table Layout</string>
    <string name="title_activity_relative_layout">RelativeLayout</string>

    <!-- Relative Layout -->
    <string name="regresar">Regresar</string>
    <string name="nombres">Nombres</string>
    <string name="apellidos">Apellidos</string>
    <string name="reminder">Recordatorio</string>
    <string name="done">Finalizar</string>
    <string name="title_activity_absolute_layout">AbsoluteLayout</string>

    <!-- Frame Layout -->
    <string name="prueba">prueba</string>
    <string name="title_activity_table_layout">TableLayout</string>
    <string name="title_activity_frame_layout">FrameLayout</string>

</resources>
