<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="vertical"
	android:layout_width="fill_parent"
    android:layout_height="fill_parent">
     <Button 
    	android:id="@+id/btnLinear"
    	android:text="@string/linear_layout"
    	android:layout_width="fill_parent"
    	android:layout_height="wrap_content" />
    
     
     <Button 
    	android:id="@+id/btnRelative"
    	android:text="@string/relative_layout"
    	android:layout_width="fill_parent"
    	android:layout_height="wrap_content" />
     
     <Button 
    	android:id="@+id/btnAbsolute"
    	android:text="@string/absolute_layout"
    	android:layout_width="fill_parent"
    	android:layout_height="wrap_content" />
     
     
     <Button 
    	android:id="@+id/btnFrame"
    	android:text="@string/frame_layout"
    	android:layout_width="fill_parent"
    	android:layout_height="wrap_content" />
     
     <Button 
    	android:id="@+id/btnTable"
    	android:text="@string/table_layout"
    	android:layout_width="fill_parent"
    	android:layout_height="wrap_content" />
     
</LinearLayout>